# CasualRecs

./: PropCare_notebook.ipynb  README.md  create_dataset.ipynb.ipynb  environment.yml  exps.ipynb  pyproject.toml  requirements.txt
results/: dlce_on_popular_CO.csv  dlce_on_popular_CP.csv  dlce_on_propcare_CO.csv  dlce_on_propcare_CP.csv  dlce_on_random_CO.csv  dlce_on_random_CP.csv  dlce_optuna_CO.csv  dlce_optuna_CO_old.csv  dlce_optuna_CP.csv  dlce_optuna_CP_old.csv  propcare_optuna_CO.csv  propcare_optuna_CP.csv
src/: __init__.py  evaluator.py
src/data/: __init__.py  data.ipynb  data_generator.py  preprocess_dunnhumby.R  preprocessed_dataset.py
src/models/: __init__.py  base.py  dlce.py  neighbor.py  popular.py  propcare.py  propdlce.py  random.py
uplift/: __init__.py  evaluator.py
uplift/data/: __init__.py  prepare_data.py  preprocess_dunnhumby.R  preprocessed_dataset.py
uplift/models/: __init__.py  base.py  dlce.py  neighbor.py  popular.py  propcare.py  propdlce.py  random.py
